# cl_plg--clang-plugin-base--bkOfGitee

./: CMakeLists.txt  ClpBaseMain.cpp  base_util.cmake
impl/base/: ASTContextUtil.cpp  ActMain.cpp  ClGO.cpp  LocId.cpp  StrUtil.cpp  Util.cpp  UtilAloneContainerStmt.cpp  UtilAttrKind.cpp  UtilCompoundStmt.cpp  UtilConvertNodeType.cpp  UtilDebugDecl.cpp  UtilDebugStmt.cpp  UtilDiagnostics.cpp  UtilEditBuffer.cpp  UtilEndStmtOf.cpp  UtilEnvVar.cpp  UtilFile.cpp  UtilFuncDecl.cpp  UtilFuncIsX.cpp  UtilGetSrcFilePathByLoc.cpp  UtilGetSrcTxtBySrcRange.cpp  UtilInsertInclude.cpp  UtilIsSysSrcFileOrMe.cpp  UtilLineNum.cpp  UtilLocId.cpp  UtilMacro.cpp  UtilMainFile.cpp  UtilNextToken.cpp  UtilParentKind.cpp  UtilPrintAstNode.cpp  UtilPrtSrcTxt.cpp  UtilRetStmt.cpp  UtilRewriteBuffer.cpp  UtilSrcRange.cpp  UtilSrcRangeRelation.cpp  UtilStmtEndSemicolon.cpp  UtilStmtLs.cpp  UtilStr.cpp  UtilSubStmt.cpp  UtilTraverseSingleParent.cpp  (+2 more)
include/base/: ASTContextUtil.h  ActMain.h  ClGO.h  LocId.h  MyAssert.h  StrUtil.h  Util.h  UtilAloneContainerStmt.h  UtilAttrKind.h  UtilCompoundStmt.h  UtilConvertNodeType.h  UtilDebugDecl.h  UtilDebugStmt.h  UtilDiagnostics.h  UtilEditBuffer.h  UtilEndStmtOf.h  UtilEnvVar.h  UtilFile.h  UtilFuncDecl.h  UtilFuncIsX.h  UtilGetSrcFilePathByLoc.h  UtilGetSrcTxtBySrcRange.h  UtilInsertInclude.h  UtilIsSysSrcFileOrMe.h  UtilLineNum.h  UtilLocId.h  UtilMacro.h  UtilMainFile.h  UtilNextToken.h  UtilParentKind.h  UtilPrintAstNode.h  UtilPrtSrcTxt.h  UtilRetStmt.h  UtilRewriteBuffer.h  UtilSrcRange.h  UtilSrcRangeRelation.h  UtilStmtEndSemicolon.h  UtilStr.h  (+5 more)
